api: Return schools in a sorted manner.
